--- a/module7/src/StoreOfBuild.DI/StoreOfBuild.DI.csproj
+++ b/module7/src/StoreOfBuild.DI/StoreOfBuild.DI.csproj
@@ -10,10 +10,14 @@
     <PackageReference Include="Microsoft.EntityframeworkCore.SqlServer" Version="2.0.0" />   
     <PackageReference Include="Microsoft.EntityframeworkCore.Tools" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
+
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.0.0" />
+
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\StoreOfBuild.Data\StoreOfBuild.Data.csproj" />
+    <ProjectReference Include="..\StoreOfBuild.Domain\StoreOfBuild.Domain.csproj" />
   </ItemGroup>
 
 </Project>
