--- a/module7/src/StoreOfBuild.Web/package.json
+++ b/module7/src/StoreOfBuild.Web/package.json
@@ -13,6 +13,7 @@
     "gulp-cssmin": "^0.2.0",
     "gulp-uncss": "^1.0.6",
     "jquery": "^3.2.1",
+    "jquery-ajax-unobtrusive": "^3.2.4",
     "jquery-validation": "^1.17.0",
     "jquery-validation-unobtrusive": "^3.2.6"
   }
